--- a/mw-webapp/package.json
+++ b/mw-webapp/package.json
@@ -14,7 +14,7 @@
     "stylelint-fix": "stylelint **/*.scss --fix",
     "format": "prettier --write",
     "type-check": "tsc",
-    "test": "echo \"Script doesn't work\"",
+    "test": "jest",
     "prepare": "cd .. && husky install",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
@@ -62,8 +62,6 @@
     "@radix-ui/react-toast": "1.1.5",
     "@radix-ui/themes": "2.0.2",
     "@tanstack/react-table": "8.10.7",
-    "@testing-library/jest-dom": "6.1.5",
-    "@testing-library/react": "14.1.2",
     "@testing-library/user-event": "14.5.1",
     "clsx": "2.0.0",
     "firebase": "10.7.1",
@@ -83,6 +81,7 @@
     "zod": "3.22.4"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.23.3",
     "@ljharb/eslint-config": "21.1.0",
     "@storybook/addon-essentials": "7.6.3",
     "@storybook/addon-interactions": "7.6.3",
@@ -94,6 +93,8 @@
     "@storybook/react-vite": "7.6.3",
     "@storybook/testing-library": "0.2.2",
     "@stylistic/eslint-plugin": "^1.5.1",
+    "@testing-library/jest-dom": "6.1.5",
+    "@testing-library/react": "14.1.2",
     "@types/jest": "29.5.11",
     "@types/node": "16.18.67",
     "@types/pdfmake": "^0.2.8",
@@ -105,6 +106,7 @@
     "@typescript-eslint/parser": "6.14.0",
     "@vitejs/plugin-react": "4.2.1",
     "@yarnaimo/eslint-config": "0.4.4",
+    "babel-jest": "^29.7.0",
     "cypress": "13.6.1",
     "envalid": "8.0.0",
     "eslint": "8.55.0",
@@ -112,6 +114,7 @@
     "eslint-plugin-react": "7.33.2",
     "eslint-plugin-simple-import-sort": "10.0.0",
     "husky": "8.0.3",
+    "jest": "^29.7.0",
     "lint-staged": "15.2.0",
     "postcss-scss": "4.0.9",
     "storybook": "7.6.3",
